# procman

./: Cargo.toml  README.md  Settings.toml
src/: agent.rs  bin.rs
src/agent/: models.rs
src/agent/models/: process.rs  user.rs
src/agent/os/: linux.rs
