[package]
name = "procman"
version = "0.1.0"
authors = ["Areg Baghinyan <areg@baghinyan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "procman"
path = "src/bin.rs"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.16.5"
broadcaster="1.0.0"
futures="0.3"
config="0.11.0"